Version 0.5.1 - UNRELEASED
 * added extrusion for 2D models
 * 2D projection of multi-layered 2D models
 * significantly improved performance of 3D visualization
 * fixed "help" links for Windows users
 * improved detection of library locations for Windows package
 * minor bugs fixed

Version 0.5 - 2011-03-28
 * Toolpaths:
  * added adaptive positioning for DropCutter strategy (improves precision)
  * allow conventional/climb milling style for ContourFollow and Engrave strategies
  * added a very simple "pocketing" mode for 2D models
  * added toolpath cropping 
  * added toolpath grid pattern: clone a single toolpath in rows and columns
  * unify DropCutter behaviour for models that are higher than the defined bounding box
  * more efficient tool moves for Engraving
 * Model handling:
  * added support for simple multi-layered 2D models
  * added 2D projection of 3D models
  * added automatic repair of inconsistent polygon winding (inside/outside detection)
  * automatically distributed support bridges can now be placed at corners or edges
 * GCode:
  * added basic support for "touch off" and length compensated tool change
  * GCode positioning precision (number of digits) is configurable
  * the default filename extension for exported GCode files is now configurable
 * Visualization:
  * changed "simulation mode" for visualizing the machine moves (before: material removal)
  * visualize toolpath moves up to safety height properly
  * the scroll wheel now behaves similarly to Inkscape's interface (pan and zoom)
  * optional visualization of toolpath direction
  * visualize "inside" polygons (holes) via partial transparency
 * Usability:
  * added a configuration setting for automatically loading a custom task settings file on startup
  * added a simple "undo" feature for reversing model manipulations
  * enabled drag'n'drop for loading models
  * visibility of 3D view items is now configurable in the 3D window
   * via a button and via the context menu